# meritocrab

./: .autonoe-note.md  .gitignore  .meritocrab.toml.example  .socialcredit.toml.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN-github-actions.md  Dockerfile  README.md  SETUP.md  SPEC.md  config.example.toml  docker-compose.yml  knope.toml
.github/workflows/: ci.yml  pr-commands.yml  pr-evaluate.yml  pr-gate.yml  prepare-release.yml  release.yml
crates/mc-api/: Cargo.toml
crates/mc-api/src/: admin_handlers.rs  auth_middleware.rs  error.rs  health.rs  oauth.rs  repo_config_loader.rs  state.rs  webhook_handler.rs
crates/mc-api/tests/: admin_api_test.rs  credit_commands_test.rs  integration_test.rs  llm_evaluation_test.rs  shadow_blacklist_test.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: config.rs  credit.rs  lib.rs  policy.rs
crates/mc-db/: Cargo.toml
crates/mc-db/migrations/: 001_initial.sql
crates/mc-db/src/: evaluations.rs  models.rs
crates/mc-github/: Cargo.toml
crates/mc-github/src/: api.rs  auth.rs
crates/mc-llm/: Cargo.toml
crates/mc-llm/src/: claude.rs  factory.rs  mock.rs  openai.rs  traits.rs
crates/mc-server/: Cargo.toml
crates/mc-server/src/: config.rs  main.rs
crates/meritocrab-api/: Cargo.toml
crates/meritocrab-api/src/: admin_handlers.rs  auth_middleware.rs  credit_commands.rs  error.rs  extractors.rs  health.rs  oauth.rs  repo_config_loader.rs  state.rs  webhook_handler.rs
crates/meritocrab-api/tests/: admin_api_test.rs  credit_commands_test.rs  integration_test.rs  llm_evaluation_test.rs  shadow_blacklist_test.rs
crates/meritocrab-cli/: Cargo.toml
crates/meritocrab-cli/src/: git_state.rs  main.rs
crates/meritocrab-core/: Cargo.toml
crates/meritocrab-core/src/: credit.rs  lib.rs  policy.rs
crates/meritocrab-db/: Cargo.toml
crates/meritocrab-db/src/: contributors.rs  credit_events.rs  error.rs  evaluations.rs  models.rs  pool.rs
crates/meritocrab-github/: Cargo.toml
crates/meritocrab-github/src/: api.rs  auth.rs  webhook.rs
crates/meritocrab-llm/: Cargo.toml
crates/meritocrab-llm/src/: claude.rs  config.rs  factory.rs  mock.rs  openai.rs  traits.rs
crates/meritocrab-server/: Cargo.toml
crates/meritocrab-server/src/: config.rs  main.rs
crates/sc-api/: Cargo.toml
crates/sc-api/src/: admin_handlers.rs  auth_middleware.rs  error.rs  health.rs  lib.rs  oauth.rs  rate_limit.rs  repo_config_loader.rs  state.rs  webhook_handler.rs
crates/sc-api/tests/: admin_api_test.rs  credit_commands_test.rs  integration_test.rs  llm_evaluation_test.rs  shadow_blacklist_test.rs
crates/sc-core/: Cargo.toml
crates/sc-core/src/: credit.rs  error.rs  evaluation.rs  policy.rs
crates/sc-db/: Cargo.toml
crates/sc-db/src/: contributors.rs  credit_events.rs  evaluations.rs  lib.rs  pool.rs  repo_configs.rs
crates/sc-github/: Cargo.toml
crates/sc-github/src/: api.rs  error.rs  lib.rs  types.rs  webhook.rs
crates/sc-llm/: Cargo.toml
crates/sc-llm/src/: claude.rs  factory.rs  lib.rs  mock.rs  openai.rs  prompt.rs  traits.rs
crates/sc-server/: Cargo.toml
crates/sc-server/src/: config.rs  main.rs
docs/: github-actions-setup.md
src/: lib.rs
