[workspace]
members = [
    "crates/sc-server",
    "crates/sc-core",
    "crates/sc-github",
    "crates/sc-llm",
    "crates/sc-db",
    "crates/sc-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# HTTP framework
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"

# GitHub API
octocrab = "0.49.5"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "any", "sqlite", "postgres"] }

# LLM HTTP calls
reqwest = { version = "0.13.2", features = ["json"] }

# HMAC verification
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
hex = "0.4.3"

# Secret management
secrecy = "0.10.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Config
toml = "0.8.22"
config = "0.15.19"

# Errors
thiserror = "2.0.18"
anyhow = "1.0.101"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.20"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"

# Time
chrono = "0.4.42"

# Testing
wiremock = "0.6.5"
