[package]
name = "meritocrab"
description = "A reputation system for open source repositories using LLM-based contribution evaluation"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/hydai/meritocrab"
authors = ["hydai"]
readme = "README.md"
keywords = ["github", "reputation", "credit", "llm", "open-source"]
categories = ["development-tools"]

[dependencies]
meritocrab-core = { path = "crates/meritocrab-core", version = "0.1.2" }
meritocrab-github = { path = "crates/meritocrab-github", version = "0.1.2" }
meritocrab-db = { path = "crates/meritocrab-db", version = "0.1.2" }
meritocrab-llm = { path = "crates/meritocrab-llm", version = "0.1.2" }
meritocrab-api = { path = "crates/meritocrab-api", version = "0.1.2" }

[workspace]
members = [
    "crates/meritocrab-server",
    "crates/meritocrab-core",
    "crates/meritocrab-github",
    "crates/meritocrab-llm",
    "crates/meritocrab-db",
    "crates/meritocrab-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/hydai/meritocrab"
authors = ["hydai"]

[workspace.dependencies]
# HTTP framework
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"

# GitHub API
octocrab = "0.49.5"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "any", "sqlite", "postgres", "chrono"] }

# LLM HTTP calls
reqwest = { version = "0.13.2", features = ["json"] }

# HMAC verification
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
hex = "0.4.3"

# Secret management
secrecy = "0.10.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Config
toml = "0.8.22"
config = "0.15.19"

# Errors
thiserror = "2.0.18"
anyhow = "1.0.101"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.20"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Random number generation
rand = "0.9.0"

# Base64 encoding/decoding
base64 = "0.22.1"

# Regular expressions
regex = "1.11.1"
lazy_static = "1.5.0"

# OAuth2 and sessions
oauth2 = "5.0.0"
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
urlencoding = "2.1.3"

# Rate limiting
tower_governor = "0.8.0"

# System info
sysinfo = "0.33.0"

# Testing
wiremock = "0.6.5"
