[package]
name = "mc-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mc-core = { path = "../mc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
