[package]
name = "mc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mc-api = { path = "../mc-api" }
mc-core = { path = "../mc-core" }
mc-db = { path = "../mc-db" }
mc-github = { path = "../mc-github" }
mc-llm = { path = "../mc-llm" }

axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = "0.3.47"
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
