[package]
name = "meritocrab-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
meritocrab-core = { path = "../meritocrab-core" }
meritocrab-db = { path = "../meritocrab-db" }
meritocrab-github = { path = "../meritocrab-github" }
meritocrab-llm = { path = "../meritocrab-llm" }

axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
tower = { workspace = true }
