[package]
name = "meritocrab-api"
description = "HTTP API handlers and middleware for the Meritocrab reputation system"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
meritocrab-core = { path = "../meritocrab-core", version = "0.1.4" }
meritocrab-db = { path = "../meritocrab-db", version = "0.1.4" }
meritocrab-github = { path = "../meritocrab-github", version = "0.1.4" }
meritocrab-llm = { path = "../meritocrab-llm", version = "0.1.4" }

axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
tower = { workspace = true }
