[package]
name = "meritocrab-core"
description = "Core credit scoring logic for the Meritocrab reputation system"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
