[package]
name = "meritocrab-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

meritocrab-core = { path = "../meritocrab-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
