[package]
name = "meritocrab-db"
description = "Database layer for the Meritocrab reputation system"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

meritocrab-core = { path = "../meritocrab-core", version = "0.1.4" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
