[package]
name = "meritocrab-github"
description = "GitHub API integration for the Meritocrab reputation system"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
