[package]
name = "meritocrab-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
meritocrab-core = { path = "../meritocrab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
