[package]
name = "meritocrab-llm"
description = "LLM evaluator trait and implementations for the Meritocrab reputation system"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
meritocrab-core = { path = "../meritocrab-core", version = "0.1.4" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
