[package]
name = "meritocrab-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
meritocrab-api = { path = "../meritocrab-api" }
meritocrab-core = { path = "../meritocrab-core" }
meritocrab-db = { path = "../meritocrab-db" }
meritocrab-github = { path = "../meritocrab-github" }
meritocrab-llm = { path = "../meritocrab-llm" }

axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = "0.3.47"
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
