[package]
name = "meritocrab-server"
description = "Server binary for the Meritocrab reputation system"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
meritocrab-api = { path = "../meritocrab-api", version = "0.1.3" }
meritocrab-core = { path = "../meritocrab-core", version = "0.1.3" }
meritocrab-db = { path = "../meritocrab-db", version = "0.1.3" }
meritocrab-github = { path = "../meritocrab-github", version = "0.1.3" }
meritocrab-llm = { path = "../meritocrab-llm", version = "0.1.3" }

axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = "0.3.47"
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
