[package]
name = "sc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sc-core = { path = "../sc-core" }
sc-db = { path = "../sc-db" }
sc-github = { path = "../sc-github" }
sc-llm = { path = "../sc-llm" }

axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
tower = { workspace = true }
