[package]
name = "sc-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
