[package]
name = "sc-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sc-core = { path = "../sc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
