[package]
name = "sc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sc-api = { path = "../sc-api" }
sc-core = { path = "../sc-core" }
sc-db = { path = "../sc-db" }
sc-github = { path = "../sc-github" }
sc-llm = { path = "../sc-llm" }

axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = "0.3.47"
tokio = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
